<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">bConverter</string>
    <string name="app_name">bconv</string>
    <string name="labelBits">Bit/sec</string>
    <string name="labelOctets">Octet/sec</string>
    <string name="empty"></string>
    <string name="labelBits2Octets">Bit/s to Octet/s</string>
    <string name="labelOctets2Bits">Octet/s to Bit/s</string>
    <string name="buttonClose">Close</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonConvert">Convert</string>

    <string-array name="unit_array_b">
      <item>bit</item>
      <item>Kb</item>
      <item>Mb</item>
      <item>Gb</item>
      <item>Tb</item>
    </string-array>
    <string-array name="unit_array_o">
      <item>octet</item>
      <item>Ko</item>
      <item>Mo</item>
      <item>Go</item>
      <item>To</item>
    </string-array>
</resources>
