<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@android:color/transparent"
   android:orientation="vertical"
   tools:context=".BlockBackgroundActivity">
   
	<GridLayout
		    android:layout_width="match_parent" android:layout_height="match_parent"
		    android:background="@android:color/transparent"
		    android:columnCount="3" 
		    android:paddingBottom="5dp"
		    android:paddingLeft="5dp" 
		    android:paddingRight="5dp"
		    android:paddingTop="5dp" >
	
	  <TextView android:id="@+id/labelBits" 
		    android:layout_column="0"
		    android:layout_row="0" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:text="@string/labelBits" />
	
	  <EditText
	      android:id="@+id/editTextBits"
	      android:layout_width="180dp"
	      android:layout_height="wrap_content"
	      android:layout_column="1"
	      android:layout_marginLeft="5dp"
	      android:layout_row="0"
	      android:ems="10"
	      android:inputType="numberDecimal" >
	
	    <requestFocus />
	  </EditText>
	  <Spinner android:id="@+id/spinnerUnitBits"
		   android:layout_column="2"
		   android:layout_row="0" 
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginLeft="5dp"
		   android:entries="@array/unit_array_b"/>
	
	  <TextView android:id="@+id/labelOctets" 
		    android:layout_column="0"
		    android:layout_row="1" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:text="@string/labelOctets" />
	
	  <EditText
	      android:id="@+id/editTextOctets"
	      android:layout_width="180dp"
	      android:layout_height="wrap_content"
	      android:layout_column="1"
	      android:layout_marginLeft="5dp"
	      android:layout_row="1"
	      android:ems="10"
	      android:inputType="numberDecimal" />
	  
	  <Spinner android:id="@+id/spinnerUnitOctets"
		   android:layout_column="2"
		   android:layout_row="1" 
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:layout_marginLeft="5dp"
		   android:entries="@array/unit_array_o"/>
	
	  <TableLayout
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_row="2"
	      android:layout_column="0"
	      android:layout_columnSpan="3"
	      android:layout_gravity="top"
	      android:layout_marginTop="10dp"
		  android:stretchColumns="*"
		  android:weightSum="2"  >
	    
	    <TableRow android:layout_weight="1" >
		    <ToggleButton
				android:id="@+id/buttonTypeChoice"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
			    android:textOn="@string/labelOctets2Bits"
			    android:textOff="@string/labelBits2Octets"
				android:onClick="onClick" />
		
		    <Button
				android:id="@+id/buttonConvert"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/buttonConvert"
				android:onClick="onClick" />
	    </TableRow>
	
	    <TableRow android:layout_weight="1" >
		    <Button
		        android:id="@+id/buttonClear"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:onClick="onClick"
		        android:text="@string/buttonClear" />
		
		    <Button
		        android:id="@+id/buttonClose"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:onClick="onClick"
		        android:text="@string/buttonClose" />
	    </TableRow>
	
	  </TableLayout>
	  
	</GridLayout>
</LinearLayout>
